# tauri-calculator-rust

./: Cargo.toml  README.md  styles.css
src/: app.rs  buttons.rs  main.rs
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/calculate/: intopos.rs  mod.rs  poseval.rs
